[BUG-FIX] hide image behind Agenda on phone

--- a/src/components/mainStyle.module.css
+++ b/src/components/mainStyle.module.css
@@ -61,4 +61,8 @@
     .backgroundImage {
         width: 100%;
     }
+
+    .hideOnPhones {
+        display: none;
+    }
 }
